--- a/Präsentation/impress-demo.css
+++ b/Präsentation/impress-demo.css
@@ -207,16 +207,6 @@ a:focus {
 }
 
 
-/* Custom CSS: */
-h1 {text-align:center; font-size:150%;}
-h2 {text-align:center; font-size:150%;}
-h3 {text-align:center; font-size:125%;}
-
-
-.TeXFake {transition: opacity .5s;}
-.past .TeXFake { opacity: 0;}
-
-
 /*
     The last step is an overview.
     There is no content in it, so we make sure it's not visible because we want
@@ -269,13 +259,24 @@ h3 {text-align:center; font-size:125%;}
 */
 
 
-/*Custom CSS*/
-.problem {border-radius: 25px; background:#3333B2; color:#FFFFFF; box-shadow: 10px 10px 8px #868686; padding:20px;}
+/* Custom CSS: */
+h1 {text-align:center; font-size:150%;}
+h2 {text-align:center; font-size:150%;}
+h3 {text-align:center; font-size:125%;}
+
+
+.TeXFake {transition: opacity .5s;}
+.past .TeXFake { opacity: 0;}
+
+
+.problem {border-radius: 25px; background:#3333B2; color:#FFFFFF; padding:20px;}
+.TeXFakeShadow {box-shadow: 10px 10px 8px #868686; transition:box-shadow 1s;}
+.past .TeXFakeShadow {box-shadow: none;}
 
 
 
-#sidebar {display:none;}
-.sidebar-visible {display:block !important; width:100%; height:100%; background-color:#FFFFFF;}
+#sidebar {opacity:0;}
+.sidebar-visible {transition: opacity 1s; opacity:1 !important; width:100%; height:100%; background-color:#FFFFFF;}
 
 .impress-container {background:#FFFFFF;
 	/*background: rgb(215, 215, 215);
